--- a/src/app/auth/components/register/register.component.html
+++ b/src/app/auth/components/register/register.component.html
@@ -1,1 +1,24 @@
-Register page
+<div class="auth-page">
+  <div class="container page">
+    <div class="row">
+      <div class="'col-md-6 offset-md-3 col-xs-12">
+        <h1 class="'text-xs-center">SignUp</h1>
+        <p class="'text-xs-center">
+          <a routerLink="/login">Have an account?</a>
+        </p>
+        backend err here
+        <form>
+          <fieldset class="form-group">
+            <input type="text" class="form-control form-control-lg" placeholder="Username" />
+          </fieldset>
+          <fieldset class="form-group">
+            <input type="text" class="form-control form-control-lg" placeholder="Email" />
+          </fieldset>
+          <fieldset class="form-group">
+            <input type="password" class="form-control form-control-lg" placeholder="Password" />
+          </fieldset>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
