--- a/src/app/auth/components/register/register.component.html
+++ b/src/app/auth/components/register/register.component.html
@@ -1,9 +1,9 @@
 <div class="auth-page">
   <div class="container page">
     <div class="row">
-      <div class="'col-md-6 offset-md-3 col-xs-12">
-        <h1 class="'text-xs-center">SignUp</h1>
-        <p class="'text-xs-center">
+      <div class="col-md-6 offset-md-3 col-xs-12">
+        <h1 class="text-xs-center">Sign Up</h1>
+        <p class="text-xs-center">
           <a routerLink="/login">Have an account?</a>
         </p>
         backend err here
@@ -17,6 +17,9 @@
           <fieldset class="form-group">
             <input type="password" class="form-control form-control-lg" placeholder="Password" />
           </fieldset>
+          <button type="submit" class="btn btn-lg btn-primary pull-xs-right">
+            Sign Up
+          </button>
         </form>
       </div>
     </div>
