--- a/src/app/auth/components/register/register.component.html
+++ b/src/app/auth/components/register/register.component.html
@@ -7,15 +7,21 @@
           <a routerLink="/login">Have an account?</a>
         </p>
         backend err here
-        <form>
+        <form [formGroup]="form" (ngSubmit)="onSubmit()">
           <fieldset class="form-group">
-            <input type="text" class="form-control form-control-lg" placeholder="Username" />
+            <input type="text" class="form-control form-control-lg" placeholder="Username"
+            formControlName="username"
+            />
           </fieldset>
           <fieldset class="form-group">
-            <input type="text" class="form-control form-control-lg" placeholder="Email" />
+            <input type="text" class="form-control form-control-lg" placeholder="Email" 
+            formControlName="email"
+            />
           </fieldset>
           <fieldset class="form-group">
-            <input type="password" class="form-control form-control-lg" placeholder="Password" />
+            <input type="password" class="form-control form-control-lg" placeholder="Password"
+            formControlName="password"
+            />
           </fieldset>
           <button type="submit" class="btn btn-lg btn-primary pull-xs-right">
             Sign Up
